[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Animals/cow_baby animation.png" type="Texture" id=1]
[ext_resource path="res://Assets/Others/shadow.png" type="Texture" id=2]
[ext_resource path="res://Animals/Cow.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "down"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("CowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("CowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 16 ]
}

[sub_resource type="Animation" id=3]
resource_name = "left"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("CowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 8 ]
}

[sub_resource type="Animation" id=4]
resource_name = "right"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("CowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 12 ]
}

[sub_resource type="Animation" id=2]
resource_name = "up"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("CowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 4 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 7.0
height = 0.0

[sub_resource type="CircleShape2D" id=7]
radius = 16.1245

[node name="Cow" type="KinematicBody2D" groups=["Time"]]
script = ExtResource( 3 )
old = true
hasMilk = true

[node name="CowSprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )
hframes = 4
vframes = 5
frame = 16

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/down = SubResource( 1 )
anims/idle = SubResource( 5 )
anims/left = SubResource( 3 )
anims/right = SubResource( 4 )
anims/up = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 6 )

[node name="Milking" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Milking"]
position = Vector2( 0, -8 )
shape = SubResource( 7 )

[connection signal="body_entered" from="Milking" to="." method="_on_Milking_body_entered"]
[connection signal="body_exited" from="Milking" to="." method="_on_Milking_body_exited"]
